<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="result">=</string>
    <string name="add">+</string>
    <string name="substract">-</string>

    <string name="dot">.</string>

    <string name="clear">C</string>
    <string name="backspace">B</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="settings_vibration">Vibration</string>
    <string name="settings_theme">Theme</string>

    <string-array name="settings_themes">
        <item>Green</item>
        <item>Blue</item>
    </string-array>

</resources>
