<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="32sp"
        android:layout_alignParentEnd="true"
        android:gravity="top"/>

        <TableLayout
            android:id="@+id/commands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/darker_gray">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/sevenButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="7"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/eightButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="8"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/nineButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="9"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/addButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:onClick="appendOperator"
                    style="@style/green_button"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/fourButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="4"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/fiveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/sixButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="6"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/substractButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/substract"
                    android:onClick="appendOperator"
                    style="@style/green_button"/>


            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/oneButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/twoButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/threeButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/backspaceButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/backspace"
                    android:onClick="backspace"
                    style="@style/green_button"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/zeroButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:onClick="appendNumber"
                    style="@style/number_button"/>
                <Button
                    android:id="@+id/resultButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/result"
                    android:onClick="result"
                    style="@style/green_button"/>
                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear"
                    android:onClick="clear"
                    style="@style/green_button"/>

            </TableRow>

        </TableLayout>
    
</RelativeLayout>
